--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kafka-streams-nodejs",
   "version": "1.0.0",
   "description": "",
-  "main": "streams.js",
+  "main": "kafka-streams-nodejs/streams.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
